deployment/gcp/gke/workload-identity.yaml
# GKE Ingress with Google Cloud Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-service-ingress
  namespace: ml-production
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ml-service-ip
    networking.gke.io/managed-certificates: ml-service-ssl-cert
    networking.gke.io/v1beta1.FrontendConfig: ml-service-frontend-config
    cloud.google.com/armor-config: '{"ml-service-security-policy": "ml-service-armor-policy"}'
spec:
  rules:
  - host: ml-api.gcp.example.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ml-service
            port:
              number: 8000
